--- a/choose-your-own-adventure/res/template.html
+++ b/choose-your-own-adventure/res/template.html
@@ -1,45 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ .Title }}</title>
     <style>
+        :root {
+            --primary-color: #1a73e8;
+            --background: #f4f6f8;
+            --card-bg: #ffffff;
+            --text-color: #333;
+            --border-radius: 12px;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            padding: 2em;
-            background-color: #f9f9f9;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 2rem;
+            background-color: var(--background);
+            color: var(--text-color);
+            line-height: 1.6;
         }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: var(--card-bg);
+            padding: 2rem;
+            border-radius: var(--border-radius);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+        }
+
+        h1 {
+            font-size: 2.2rem;
+            margin-bottom: 1.5rem;
+            color: var(--primary-color);
+        }
+
         .story {
-            margin-bottom: 1.5em;
+            margin-bottom: 1.2rem;
+            font-size: 1.1rem;
         }
+
+        h2 {
+            margin-top: 2rem;
+            font-size: 1.5rem;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
         .option {
-            margin: 0.5em 0;
+            margin: 0.6rem 0;
         }
+
         .option a {
-            color: #1a73e8;
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            background-color: var(--primary-color);
+            color: white;
             text-decoration: none;
+            border-radius: var(--border-radius);
+            transition: background-color 0.2s ease-in-out;
         }
+
         .option a:hover {
-            text-decoration: underline;
+            background-color: #155ab6;
         }
     </style>
 </head>
 <body>
-<h1>{{ .Title }}</h1>
+<div class="container">
+    <h1>{{ .Title }}</h1>
 
-{{ range .Story }}
-<p class="story">{{ . }}</p>
-{{ end }}
-
-{{ if .Options }}
-<h2>What do you want to do?</h2>
-<ul>
-    {{ range .Options }}
-    <li class="option">
-        <a href="/{{ .Arc }}">{{ .Text }}</a>
-    </li>
+    {{ range .Story }}
+    <p class="story">{{ . }}</p>
     {{ end }}
-</ul>
-{{ end }}
+
+    {{ if .Options }}
+    <h2>What do you want to do?</h2>
+    <ul>
+        {{ range .Options }}
+        <li class="option">
+            <a href="/{{ .Arc }}">{{ .Text }}</a>
+        </li>
+        {{ end }}
+    </ul>
+    {{ end }}
+</div>
 </body>
 </html>
