add "back to start" button

--- a/choose-your-own-adventure/res/template.html
+++ b/choose-your-own-adventure/res/template.html
@@ -27,7 +27,7 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             background-color: var(--card-bg);
             padding: 2rem;
@@ -61,18 +61,40 @@
         }
 
         .option a {
-            display: inline-block;
-            padding: 0.5rem 1rem;
+            display: block;
+            width: 100%;
+            padding: 0.75rem 1rem;
             background-color: var(--primary-color);
             color: white;
             text-decoration: none;
             border-radius: var(--border-radius);
             transition: background-color 0.2s ease-in-out;
+            text-align: center;
         }
+
 
         .option a:hover {
             background-color: #155ab6;
         }
+
+        .intro-button {
+            display: block;
+            width: 100%;
+            margin-top: 2rem;
+            padding: 0.75rem 1rem;
+            background-color: #e0e0e0;
+            color: #333;
+            text-decoration: none;
+            border-radius: var(--border-radius);
+            font-weight: bold;
+            text-align: center;
+            transition: background-color 0.2s ease;
+        }
+
+        .intro-button:hover {
+            background-color: #c6c6c6;
+        }
+
     </style>
 </head>
 <body>
@@ -93,6 +115,8 @@
         {{ end }}
     </ul>
     {{ end }}
+
+    <a href="/intro" class="intro-button">← Back to Start</a>
 </div>
 </body>
 </html>
